# boilerplate

./: arithmetic_arranger.py  pyproject.toml  test_module.py
